--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ sass:
   
 theme: jekyll-theme-primer
   
-title: "One-shot Parametirc Audio Production Style Transfer with Application to Frequency Equalization"
+title: "Unsupervised Representation Learning for Singing Voice Separation"
